build/log/idf_py_stdout_output_45564
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "C:\Users\Hendrik Quintelier\Wifi\build\bootloader\esp-idf\esptool_py" && c:\Workspace\.espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Workspace/esp/v5.2.3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 "C:/Users/Hendrik Quintelier/Wifi/build/bootloader/bootloader.bin""
Bootloader binary size 0x5470 bytes. 0x2b90 bytes (34%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.c.obj 
ccache C:\Workspace\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"C:/Users/Hendrik Quintelier/Wifi/build/config" -I"C:/Users/Hendrik Quintelier/Wifi/main" -IC:/Workspace/esp/v5.2.3/esp-idf/components/newlib/platform_include -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/config/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/config/include/freertos -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/config/xtensa/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Workspace/esp/v5.2.3/esp-idf/components/freertos/esp_additions/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_hw_support/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_hw_support/include/soc -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Workspace/esp/v5.2.3/esp-idf/components/heap/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/log/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/soc/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/soc/esp32s3 -IC:/Workspace/esp/v5.2.3/esp-idf/components/soc/esp32s3/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/hal/platform_port/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/hal/esp32s3/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/hal/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_rom/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_rom/include/esp32s3 -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_rom/esp32s3 -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_common/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_system/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_system/port/soc -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_system/port/include/private -IC:/Workspace/esp/v5.2.3/esp-idf/components/xtensa/esp32s3/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/xtensa/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/xtensa/deprecated_include -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/include/apps -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/include/apps/sntp -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/lwip/src/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/port/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/port/freertos/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/port/esp32xx/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Workspace/esp/v5.2.3/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_netif/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_event/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_wifi/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_phy/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_phy/esp32s3/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/nvs_flash/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/spi_flash/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_partition/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_http_server/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/http_parser -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/deprecated -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/analog_comparator/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/dac/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/gpio/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/gptimer/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/i2c/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/i2s/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/ledc/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/mcpwm/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/parlio/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/pcnt/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/rmt/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/sdio_slave/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/sdmmc/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/sigma_delta/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/spi/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/temperature_sensor/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/touch_sensor/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/twai/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/uart/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/usb_serial_jtag/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_pm/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_ringbuf/include -IC:/Workspace/esp/v5.2.3/esp-idf/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=C:/Users/Hendrik Quintelier/Wifi=." -fmacro-prefix-map=C:/Workspace/esp/v5.2.3/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\station_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.c.obj -c "C:/Users/Hendrik Quintelier/Wifi/main/station_example_main.c"
C:/Users/Hendrik Quintelier/Wifi/main/station_example_main.c: In function 'mpu_main':
C:/Users/Hendrik Quintelier/Wifi/main/station_example_main.c:156:13: error: too few arguments to function 'mpu6050_read_data'
  156 |         if (mpu6050_read_data(&data))
      |             ^~~~~~~~~~~~~~~~~
In file included from C:/Users/Hendrik Quintelier/Wifi/main/station_example_main.c:15:
C:/Users/Hendrik Quintelier/Wifi/main/mpu.h:28:6: note: declared here
   28 | void mpu6050_read_data(mpu6050_data_t *data, float elapsedTime);
      |      ^~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
